--- a/frontend/kalender.html
+++ b/frontend/kalender.html
@@ -309,6 +309,10 @@
                   right: "dayGridMonth,timeGridWeek,listWeek",
                 },
 
+                eventDidMount: function (info) {
+                  info.el.style.cursor = "pointer";
+                },
+
                 events: async function (fetchInfo, successCallback, failureCallback) {
                   try {
                     const response = await fetch("http://localhost:5000/api/pelatihan");
