kritik dan saran

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -234,7 +234,7 @@
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-            
+            <li><a href="kritiksaran.html">Kritik Saran</a></li>
             <li class="ms-lg-3">
               <a
                 href="daftarpelatihan.html"
@@ -279,7 +279,7 @@
 
                     <h1 data-aos="fade-up" data-aos-delay="200">
                       Diklat <br />
-                      Prof. Dr. Margono Soekarjo <br />Purwokerto
+                      RSUD Prof. Dr. Margono Soekarjo <br />Purwokerto
                     </h1>
 
                     <div class="cta-group" data-aos="fade-up" data-aos-delay="300">
