--- a/frontend/daftarpelatihan.html
+++ b/frontend/daftarpelatihan.html
@@ -214,7 +214,7 @@
                 <li><a href="contact.html">Kontak</a></li>
               </ul>
             </li>
-
+            <li><a href="kritiksaran.html">Kritik Saran</a></li>
             <li class="ms-lg-3">
               <a
                 href="daftarpelatihan.html"
